<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeLogger</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_text">placeholder_text</string>
    <string name="placeholder_text_time">12:00 AM</string>
    <string name="placeholder_text_duration">0.00</string>
    <string name="dash"> - </string>
    <string name="empty_time_list_text">No Logged Time</string>
    <string name="empty_task_list_text">No Tasks</string>
    <string name="time_list_edit_edit">Edit</string>
    <string name="time_list_edit_join_up">Join up</string>
    <string name="time_list_edit_join_down">Join down</string>
    <string name="time_list_edit_split">Split</string>
    <string name="time_list_edit_delete">Delete</string>

    <string-array name="action_bar_nav_labels">
        <item>Tasks</item>
        <item>Times</item>
    </string-array>

    <string name="title_activity_edit_time_range">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>
    <string name="edit_title_task">Task</string>
    <string name="edit_title_stop_time">Ending time</string>
    <string name="edit_title_start_time">Start time</string>
    <string name="placeholder_time">--:-- --</string>
    <string name="placeholder_date">MMM DD, YYYY</string>
    <string name="edit_title_duration">Duration</string>
    <string name="prompt_select_day">Select date</string>
    <string name="prompt_select_first_day">Select first day in range</string>
    <string name="prompt_select_last_day">Select last day in range</string>
    <string name="hint_task_description">Task description</string>
    <string name="hint_task_name">Task name</string>

    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_undelete">Undelete</string>

    <string name="date_range_today">Today</string>
    <string name="date_range_yesterday">Yesterday</string>
    <string name="date_range_this_week">This Week</string>
    <string name="date_range_last_week">Last Week</string>
    <string name="date_range_all_time">All Time</string>
    <string name="date_range_pick_day">Pick Day…</string>
    <string name="date_range_pick_range">Pick Range…</string>
    <string name="filter_show_hidden">Show Deleted</string>
	<string name="filter_only_recent">Only Recent</string>
    <string name="sort_by_name">By Name</string>
    <string name="sort_by_usage">By Last Usage</string>
    <string name="sort_by_creation_time">By Creation Time</string>
    <string name="action_sort">Sort</string>
    <string name="action_set_date_range">Date Range</string>
    <string name="action_new_task">New Task</string>

</resources>
